src/test/deca/context/valid/print/hello-world-basic.deca
// Description:
//    Programme minimaliste utilisant print.
//
// Resultats:
//    Hello

{
    print("Hello World");
}