src/test/deca/context/invalid/print/print-null.deca
// Description:
//    Test print null.
//
// Resultats:
//    ok

{
    print(null);
}